<resources>
    <string name="app_name">Reddit</string>

    <string name="post_user">u/%s</string>
    <string name="post_subtitle">posted %s ago in</string>
    <string name="post_subreddit">r/%s</string>
    <string name="post_more">\n\nmore…</string>

    <string name="post_loading_title">loading…</string>
    <string name="post_loading_author">anonymous</string>
    <string name="post_loading_subreddit">unknown</string>
    <string name="post_loading_self">loading…</string>

    <string name="flair_nsfw">nsfw</string>
    <string name="flair_archived">archived</string>
    <string name="flair_locked">locked</string>
    <string name="flair_spoiler">spoiler</string>
    <string name="flair_stickied">stickied</string>

    <string name="action_search">Search</string>
    <string name="search_hint">Search Posts/Subreddits</string>
    <string name="action_sort">Sort</string>
    <string name="action_view">View</string>
    <string name="action_filter">Filter</string>
    <string name="action_settings">Settings</string>
    <string name="sort_hot">Hot</string>
    <string name="sort_popular">Popular</string>
    <string name="sort_rising">Rising</string>
    <string name="sort_new">New</string>
    <string name="sort_top">Top</string>
    <string name="sort_controversial">Controversial</string>
    <string name="sort_hour">Hour</string>
    <string name="sort_day">Day</string>
    <string name="sort_week">Week</string>
    <string name="sort_month">Month</string>
    <string name="sort_year">Year</string>
    <string name="sort_all">All</string>

    <string name="popular">Popular</string>
</resources>
